--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,12 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  width: 100%;
   text-align: center;
+}
+
+.bg-white {
+  background-color: var(--color-white);
 }
 
 .logo {
