--- a/client/src/components/Row/Row.css
+++ b/client/src/components/Row/Row.css
@@ -1,6 +1,7 @@
 .row {
-  margin: var(--size-10) 0;
+  padding: var(--size-10) 0;
   display: flex;
+  align-items: center;
   gap: var(--size-5);
 }
 
