--- a/client/src/components/Button/ToolButton.css
+++ b/client/src/components/Button/ToolButton.css
@@ -32,13 +32,13 @@
 }
 
 .tool-button .icon.clipboard {
-  background-image: url("/icon-clipboard.svg");
+  background-image: url("../icon-clipboard.svg");
 }
 
 .tool-button .icon.go {
-  background-image: url("/icon-arrow-right.svg");
+  background-image: url("../icon-arrow-right.svg");
 }
 
 .tool-button .icon.search {
-  background-image: url("/icon-search.svg");
+  background-image: url("../icon-search.svg");
 }
