--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,6 +1,11 @@
 .app-header h1 {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: var(--size-40);
+}
+
+.app-header h1 .app-logo {
+  width: 200px;
 }
